# runexe

./: .InvocationParams.cpp.swp  .InvocationParams.h.swp  .InvocationResult.h.swp  .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.h  EntryPoint.cpp  Interaction.cpp  Interaction.h  InvocationParams.cpp  InvocationParams.h  InvocationResult.cpp  InvocationResult.h  InvocationVerdict.cpp  InvocationVerdict.h  Limiter.cpp  Limiter.h  Process.cpp  Process.h  Run.cpp  Run.h  Strings.cpp  Strings.h  readme.md
include/: configuration.h  interaction.h  invocation_params.h  invocation_result.h  invocation_verdict.h  limiter.h  process.h  run.h
src/: configuration.cpp  entrypoint.cpp  interaction.cpp  invocation_params.cpp  invocation_result.cpp  invocation_verdict.cpp  limiter.cpp  process.cpp  run.cpp  strings.cpp
tests/: .library.cpp.swp  build.sh  canteen.in  canteenInter.cpp  canteenSol.cpp  lib_test  library.cpp  tests.sh
